crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_multiple_embeddings_view_vector_search_w_embeddings_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, array_length(question_embedding), array_length(answer_embedding), trunc(_score, 3) FROM vector_search(qs_view, 'second', question) order by _score desc, id LIMIT 4"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs_view, Utf8("second"), question).id, vector_search(qs_view, Utf8("second"), question).answer, array_length(vector_search(qs_view, Utf8("second"), question).question_embedding), array_length(vector_search(qs_view, Utf8("second"), question).answer_embedding), trunc(vector_search(qs_view, Utf8("second"), question)._score,Int64(3))                                                                                                                                                                                       |
|               |   Sort: vector_search(qs_view, Utf8("second"), question)._score DESC NULLS FIRST, vector_search(qs_view, Utf8("second"), question).id ASC NULLS LAST, fetch=4                                                                                                                                                                                                                                                                                                                                                                                               |
|               |     Projection: vector_search(qs_view, Utf8("second"), question).id, vector_search(qs_view, Utf8("second"), question).answer, array_length(vector_search(qs_view, Utf8("second"), question).question_embedding), array_length(vector_search(qs_view, Utf8("second"), question).answer_embedding), trunc(vector_search(qs_view, Utf8("second"), question)._score, Int64(3)), vector_search(qs_view, Utf8("second"), question)._score                                                                                                                         |
|               |       TableScan: vector_search(qs_view, Utf8("second"), question) projection=[_score, answer, answer_embedding, id, question_embedding]                                                                                                                                                                                                                                                                                                                                                                                                                     |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer, array_length(vector_search(qs_view, Utf8("second"), question).question_embedding)@2 as array_length(vector_search(qs_view, Utf8("second"), question).question_embedding), array_length(vector_search(qs_view, Utf8("second"), question).answer_embedding)@3 as array_length(vector_search(qs_view, Utf8("second"), question).answer_embedding), trunc(vector_search(qs_view, Utf8("second"), question)._score,Int64(3))@4 as trunc(vector_search(qs_view, Utf8("second"), question)._score,Int64(3))] |
|               |   SortPreservingMergeExec: [_score@5 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |     SortExec: TopK(fetch=4), expr=[_score@5 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |       ProjectionExec: expr=[id@3 as id, answer@1 as answer, array_length(question_embedding@4) as array_length(vector_search(qs_view, Utf8("second"), question).question_embedding), array_length(answer_embedding@2) as array_length(vector_search(qs_view, Utf8("second"), question).answer_embedding), trunc(_score@0, 3) as trunc(vector_search(qs_view, Utf8("second"), question)._score,Int64(3)), _score@0 as _score]                                                                                                                                |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |           ProjectionExec: expr=[_score@2 as _score, answer@3 as answer, answer_embedding@4 as answer_embedding, id@0 as id, question_embedding@1 as question_embedding]                                                                                                                                                                                                                                                                                                                                                                                     |
|               |             HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@2)], projection=[id@0, question_embedding@1, _score@2, answer@3, answer_embedding@4]                                                                                                                                                                                                                                                                                                                                                           |
|               |               CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |                 ProjectionExec: expr=[CAST(key@1 AS Int64) as id, data@0 as question_embedding, 1 - distance@2 as _score]                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |                       S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |               SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |                   DataSourceExec: partitions=1, partition_sizes=[2]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
