crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_multiple_embeddings_view_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.02",
      "dataset": "qs_view",
      "matches": {
        "question": [
          "What is the effect of fibrinolysin in the reagents on the Warner-Lambert screening method for fibrinogen?"
        ]
      },
      "primary_key": {
        "id": 938
      }
    },
    {
      "_score": "0.02",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "Dermatomycosis is caused by fungal infections, specifically various forms of *tinea*, such as athlete's foot (*tinea pedis*)."
        ]
      },
      "primary_key": {
        "id": 821
      }
    },
    {
      "_score": "0.02",
      "dataset": "qs_view",
      "matches": {
        "question": [
          "Which compound is not an intermediate of the TCA cycle?"
        ]
      },
      "primary_key": {
        "id": 1279
      }
    },
    {
      "_score": "0.02",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "Pedunculagin and alchemillin have astringent and wound-healing properties, possibly due to their high tannin content."
        ]
      },
      "primary_key": {
        "id": 1015
      }
    }
  ]
}
